--- a/index.html
+++ b/index.html
@@ -33,46 +33,46 @@
           <div class="w3-white w3-text-grey w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
-              <h2>TODO</h2>
+              <h2>gcn-feloz</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudante de Programação</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Juazeiro, BAHIA - BRAZIL</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>albertomacielkraemer@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+55 74 98852-6459</p>
               <hr>
   
               <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-              <p>TODO</p>
+              <p>Arduino</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
-              <p>TODO</p>
+              <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:2%">2%</div>
               </div>
-              <p>TODO</p>
+              <p>Python</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:0%">0%</div>
               </div>
-              <p>TODO</p>
+              <p>C++</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:0%">0%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-              <p>TODO</p>
+              <p>Portuguese</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
               </div>
-              <p>TODO</p>
+              <p>English</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
               </div>
-              <p>TODO</p>
+              <p>Espanish</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
               </div>
               <br>
             </div>
